src/test/ui/issues/issue-23073.stderr
error[E0223]: ambiguous associated type
  --> $DIR/issue-23073.rs:6:17
   |
LL |     type FooT = <<Self as Bar>::Foo>::T;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ If I were you, I would simply use fully-qualified syntax: `<<Self as Bar>::Foo as Trait>::T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0223`.
